# NetAnalyzer

./: README.md  netanalyzer.py  pyproject.toml
src/netanalyzer/: __init__.py  __main__.py  analyzer.py  cli.py
