[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netanalyzer"
version = "0.1.0"
description = "Real-time network throughput monitoring via /proc/net/dev."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NetAnalyzer Contributors" }]
keywords = ["network", "monitoring", "throughput", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
netanalyzer = "netanalyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
